# SnakeGame

./: CMakeLists.txt  README.md  main.cpp
src/: map.cpp  map.h  snake.cpp  snake.h
tests/: CMakeLists.txt  snakegametest.cpp
